// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayComponent should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  z-index: 10;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
  padding: 1.25rem 1.25rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-6 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-7 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-8 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-8:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-8:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-8:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: #1552DD;
}

.emotion-11 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-12 {
  margin: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-14 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-14:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-14:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-14:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-14:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-16 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #54587F;
  width: 2.25rem;
  height: 2.25rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
  font-weight: 500;
}

.emotion-29 {
  border-collapse: separate;
  border-spacing: 0 0.75rem;
}

.emotion-30 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  opacity: 1;
}

.emotion-31 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid rgba(84,94,255,0);
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-31:hover {
  border-radius: 6.25rem;
  background: #F5F5FF;
}

.emotion-32 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-33 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid #175bf5;
  border-radius: 6.25rem;
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-33:hover {
  border-radius: 6.25rem;
  background: #F5F5FF;
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #ffffff;
  width: 2.25rem;
  opacity: 1;
  background: #175bf5;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-34:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-35 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0 solid rgba(84,94,255,0);
  border-radius: 6.25rem;
  width: 2.25rem;
  height: 2.25rem;
  color: #ffffff;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175bf5;
}

.emotion-35:hover {
  border-radius: 6.25rem;
  background: false;
}

.emotion-36 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  opacity: 1;
  background: #F5F5FF;
}

.emotion-37 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid rgba(84,94,255,0);
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-37:hover {
  border-radius: 6.25rem;
  background: transparent;
}

.emotion-88 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: #ffffff;
}

.emotion-94 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  height: 4rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0 1.25rem;
  border-top: 0.0625rem solid #E7E8FF;
}

.emotion-99 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-99:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-99:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-99:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-99:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  z-index: 10;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
  padding: 1.25rem 1.25rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-6 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-7 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-8 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-8:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-8:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-8:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: #1552DD;
}

.emotion-11 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-12 {
  margin: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: pointer;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-14 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-14:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-14:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-14:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-14:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-16 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #54587F;
  width: 2.25rem;
  height: 2.25rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
  font-weight: 500;
}

.emotion-29 {
  border-collapse: separate;
  border-spacing: 0 0.75rem;
}

.emotion-30 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  opacity: 1;
}

.emotion-31 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid rgba(84,94,255,0);
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-31:hover {
  border-radius: 6.25rem;
  background: #F5F5FF;
}

.emotion-32 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-33 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid #175bf5;
  border-radius: 6.25rem;
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-33:hover {
  border-radius: 6.25rem;
  background: #F5F5FF;
}

.emotion-34 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #ffffff;
  width: 2.25rem;
  opacity: 1;
  background: #175bf5;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-34:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-35 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0 solid rgba(84,94,255,0);
  border-radius: 6.25rem;
  width: 2.25rem;
  height: 2.25rem;
  color: #ffffff;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175bf5;
}

.emotion-35:hover {
  border-radius: 6.25rem;
  background: false;
}

.emotion-36 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  opacity: 1;
  background: #F5F5FF;
}

.emotion-37 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid rgba(84,94,255,0);
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-37:hover {
  border-radius: 6.25rem;
  background: transparent;
}

.emotion-88 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: #ffffff;
}

.emotion-94 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  height: 4rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0 1.25rem;
  border-top: 0.0625rem solid #E7E8FF;
}

.emotion-99 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-99:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-99:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-99:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-99:active:not(:disabled) {
  background-color: #1249C4;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="butonMonthsWrapperStyle"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <button
                    class="emotion-8"
                    data-testid="icon-button"
                    type="button"
                  >
                    <span
                      class="emotion-9"
                    >
                      <span
                        class="emotion-10"
                      />
                    </span>
                  </button>
                </div>
              </div>
              <div>
                <div
                  class="emotion-11"
                >
                  <div
                    class="emotion-12"
                  >
                    <div
                      class="emotion-7"
                    >
                      <button
                        class="emotion-14"
                        data-testid="button"
                        type="button"
                      >
                        <span
                          class="emotion-15"
                        >
                          <span>
                            November
                             
                            2020
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-16"
                >
                  <div
                    class="emotion-7"
                  >
                    <button
                      class="emotion-8"
                      data-testid="icon-button"
                      type="button"
                    >
                      <span
                        class="emotion-9"
                      >
                        <span
                          class="emotion-10"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-21"
            >
              <div
                class="emotion-22"
              >
                Mo
              </div>
              <div
                class="emotion-22"
              >
                Tu
              </div>
              <div
                class="emotion-22"
              >
                We
              </div>
              <div
                class="emotion-22"
              >
                Th
              </div>
              <div
                class="emotion-22"
              >
                Fr
              </div>
              <div
                class="emotion-22"
              >
                Sa
              </div>
              <div
                class="emotion-22"
              >
                Su
              </div>
            </div>
            <table
              class="emotion-29"
            >
              <tbody>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-30"
                    >
                      <div
                        class="emotion-31"
                      >
                        2
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-32"
                    >
                      <div
                        class="emotion-33"
                      >
                        3
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-34"
                    >
                      <div
                        class="emotion-35"
                      >
                        4
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        5
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        6
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        7
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        8
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        9
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        10
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        11
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        12
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        13
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        14
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        15
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        16
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        17
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        18
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        19
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        20
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        21
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        22
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        23
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        24
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        25
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        26
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        27
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        28
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        29
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-36"
                    >
                      <div
                        class="emotion-37"
                      >
                        30
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-88"
                  />
                  <td
                    class="emotion-88"
                  />
                  <td
                    class="emotion-88"
                  />
                  <td
                    class="emotion-88"
                  />
                  <td
                    class="emotion-88"
                  />
                  <td
                    class="emotion-88"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="emotion-94"
      >
        <div
          class="emotion-7"
        >
          <button
            class="emotion-14"
            data-testid="button-cancel"
            type="button"
          >
            <span
              class="emotion-15"
            >
              <span>
                Clear All
              </span>
            </span>
          </button>
        </div>
        <div
          class="emotion-7"
        >
          <button
            class="emotion-99"
            data-testid="button-apply"
            type="button"
          >
            <span
              class="emotion-15"
            >
              <span>
                Apply Dates
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverlayComponent should render datepicker correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  border-right: 0.0625rem solid #E7E8FF;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  white-space: nowrap;
  padding: 1rem;
  font-weight: 400;
  cursor: pointer;
  background-color: transparent;
  position: relative;
}

.emotion-4:hover {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  z-index: 10;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
  padding: 1.25rem 1.25rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-10 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-11 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-12:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-12:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-13 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-14 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #1552DD;
}

.emotion-15 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-16 {
  margin: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #54587F;
  width: 2.25rem;
  height: 2.25rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
  font-weight: 500;
}

.emotion-28 {
  border-collapse: separate;
  border-spacing: 0 0.75rem;
}

.emotion-29 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  opacity: 1;
}

.emotion-30 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid rgba(84,94,255,0);
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-30:hover {
  border-radius: 6.25rem;
  background: #F5F5FF;
}

.emotion-31 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-32 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid #175bf5;
  border-radius: 6.25rem;
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-32:hover {
  border-radius: 6.25rem;
  background: #F5F5FF;
}

.emotion-33 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #ffffff;
  width: 2.25rem;
  opacity: 1;
  background: #175bf5;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-33:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-34 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0 solid rgba(84,94,255,0);
  border-radius: 6.25rem;
  width: 2.25rem;
  height: 2.25rem;
  color: #ffffff;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175bf5;
}

.emotion-34:hover {
  border-radius: 6.25rem;
  background: false;
}

.emotion-35 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  opacity: 1;
  background: #F5F5FF;
}

.emotion-36 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid rgba(84,94,255,0);
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-36:hover {
  border-radius: 6.25rem;
  background: transparent;
}

.emotion-87 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: #ffffff;
}

.emotion-100 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-147 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #ffffff;
  width: 2.25rem;
  opacity: 1;
  background: #175bf5;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-147:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-180 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  height: 4rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0 1.25rem;
  border-top: 0.0625rem solid #E7E8FF;
}

.emotion-185 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-185:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-185:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-185:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-185:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  border-right: 0.0625rem solid #E7E8FF;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  white-space: nowrap;
  padding: 1rem;
  font-weight: 400;
  cursor: pointer;
  background-color: transparent;
  position: relative;
}

.emotion-4:hover {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  z-index: 10;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
  padding: 1.25rem 1.25rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-10 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-11 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-12:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-12:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-13 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-14 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-14 path {
  fill: #1552DD;
}

.emotion-15 {
  padding: 0;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  text-align: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-16 {
  margin: 0 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 500;
  color: #0f0f17;
}

.emotion-18 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-18:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-18:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-18:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #54587F;
  width: 2.25rem;
  height: 2.25rem;
  font-size: 0.875rem;
  line-height: 1.25rem;
  text-align: center;
  font-weight: 500;
}

.emotion-28 {
  border-collapse: separate;
  border-spacing: 0 0.75rem;
}

.emotion-29 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  opacity: 1;
}

.emotion-30 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid rgba(84,94,255,0);
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-30:hover {
  border-radius: 6.25rem;
  background: #F5F5FF;
}

.emotion-31 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  font-weight: bold;
  opacity: 1;
}

.emotion-32 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid #175bf5;
  border-radius: 6.25rem;
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-32:hover {
  border-radius: 6.25rem;
  background: #F5F5FF;
}

.emotion-33 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #ffffff;
  width: 2.25rem;
  opacity: 1;
  background: #175bf5;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-33:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: initial;
  right: 0;
  border-bottom-right-radius: false;
  border-top-right-radius: false;
  border-bottom-left-radius: 100%;
  border-top-left-radius: 100%;
}

.emotion-34 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0 solid rgba(84,94,255,0);
  border-radius: 6.25rem;
  width: 2.25rem;
  height: 2.25rem;
  color: #ffffff;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: #175bf5;
}

.emotion-34:hover {
  border-radius: 6.25rem;
  background: false;
}

.emotion-35 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #212332;
  width: 2.25rem;
  opacity: 1;
  background: #F5F5FF;
}

.emotion-36 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  border: 0.0625rem solid rgba(84,94,255,0);
  width: 2.25rem;
  height: 2.25rem;
  color: #212332;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background: transparent;
}

.emotion-36:hover {
  border-radius: 6.25rem;
  background: transparent;
}

.emotion-87 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  background: #ffffff;
}

.emotion-100 {
  cursor: pointer;
  margin: auto 0.3125rem;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  z-index: 10;
}

.emotion-147 {
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  position: relative;
  color: #ffffff;
  width: 2.25rem;
  opacity: 1;
  background: #175bf5;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
}

.emotion-147:after {
  z-index: -1;
  content: ' ';
  height: 100%;
  width: 50%;
  position: absolute;
  top: 0;
  left: 0;
  right: initial;
  border-bottom-right-radius: 100%;
  border-top-right-radius: 100%;
  border-bottom-left-radius: false;
  border-top-left-radius: false;
}

.emotion-180 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  height: 4rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  padding: 0 1.25rem;
  border-top: 0.0625rem solid #E7E8FF;
}

.emotion-185 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-185:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-185:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-185:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-185:active:not(:disabled) {
  background-color: #1249C4;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
      data-testid="butonMonthsWrapperStyle"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="optionsWrapperStyle"
        >
          <div
            class="emotion-4"
          >
            Last 7 days
          </div>
          <div
            class="emotion-4"
          >
            Last 30 days
          </div>
          <div
            class="emotion-4"
          >
            Custom
          </div>
        </div>
        <div
          class="emotion-7"
        >
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              <div
                class="emotion-10"
              >
                <div
                  class="emotion-11"
                >
                  <button
                    class="emotion-12"
                    data-testid="icon-button"
                    type="button"
                  >
                    <span
                      class="emotion-13"
                    >
                      <span
                        class="emotion-14"
                      />
                    </span>
                  </button>
                </div>
              </div>
              <div>
                <div
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                  >
                    <div
                      class="emotion-11"
                    >
                      <button
                        class="emotion-18"
                        data-testid="button"
                        type="button"
                      >
                        <span
                          class="emotion-19"
                        >
                          <span>
                            November
                             
                            2020
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-20"
            >
              <div
                class="emotion-21"
              >
                Mo
              </div>
              <div
                class="emotion-21"
              >
                Tu
              </div>
              <div
                class="emotion-21"
              >
                We
              </div>
              <div
                class="emotion-21"
              >
                Th
              </div>
              <div
                class="emotion-21"
              >
                Fr
              </div>
              <div
                class="emotion-21"
              >
                Sa
              </div>
              <div
                class="emotion-21"
              >
                Su
              </div>
            </div>
            <table
              class="emotion-28"
            >
              <tbody>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        2
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-31"
                    >
                      <div
                        class="emotion-32"
                      >
                        3
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-33"
                    >
                      <div
                        class="emotion-34"
                      >
                        4
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        5
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        6
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        7
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        8
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        9
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        10
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        11
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        12
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        13
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        14
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        15
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        16
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        17
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        18
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        19
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        20
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        21
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        22
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        23
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        24
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        25
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        26
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        27
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        28
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        29
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        30
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-87"
                  />
                  <td
                    class="emotion-87"
                  />
                  <td
                    class="emotion-87"
                  />
                  <td
                    class="emotion-87"
                  />
                  <td
                    class="emotion-87"
                  />
                  <td
                    class="emotion-87"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              <div>
                <div
                  class="emotion-15"
                >
                  <div
                    class="emotion-16"
                  >
                    <div
                      class="emotion-11"
                    >
                      <button
                        class="emotion-18"
                        data-testid="button"
                        type="button"
                      >
                        <span
                          class="emotion-19"
                        >
                          <span>
                            December
                             
                            2020
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-100"
                >
                  <div
                    class="emotion-11"
                  >
                    <button
                      class="emotion-12"
                      data-testid="icon-button"
                      type="button"
                    >
                      <span
                        class="emotion-13"
                      >
                        <span
                          class="emotion-14"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-20"
            >
              <div
                class="emotion-21"
              >
                Mo
              </div>
              <div
                class="emotion-21"
              >
                Tu
              </div>
              <div
                class="emotion-21"
              >
                We
              </div>
              <div
                class="emotion-21"
              >
                Th
              </div>
              <div
                class="emotion-21"
              >
                Fr
              </div>
              <div
                class="emotion-21"
              >
                Sa
              </div>
              <div
                class="emotion-21"
              >
                Su
              </div>
            </div>
            <table
              class="emotion-28"
            >
              <tbody>
                <tr>
                  <td
                    class="emotion-87"
                  />
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        1
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        2
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        3
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        4
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        5
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        6
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        7
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        8
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        9
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        10
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        11
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        12
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        13
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        14
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        15
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-35"
                    >
                      <div
                        class="emotion-36"
                      >
                        16
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-147"
                    >
                      <div
                        class="emotion-34"
                      >
                        17
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        18
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        19
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        20
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        21
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        22
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        23
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        24
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        25
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        26
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        27
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        28
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        29
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        30
                      </div>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="emotion-29"
                    >
                      <div
                        class="emotion-30"
                      >
                        31
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-87"
                  />
                  <td
                    class="emotion-87"
                  />
                  <td
                    class="emotion-87"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        class="emotion-180"
      >
        <div
          class="emotion-11"
        >
          <button
            class="emotion-18"
            data-testid="button-cancel"
            type="button"
          >
            <span
              class="emotion-19"
            >
              <span>
                Clear All
              </span>
            </span>
          </button>
        </div>
        <div
          class="emotion-11"
        >
          <button
            class="emotion-185"
            data-testid="button-apply"
            type="button"
          >
            <span
              class="emotion-19"
            >
              <span>
                Apply Dates
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
